// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render properly with flat prop 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 700;
  color: inherit;
  text-transform: uppercase;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 10px;
  margin: 8px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #5392f9;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

<div>
  <button
    class="c0"
  >
    <strong
      class="c1"
    >
      Flat Button
    </strong>
  </button>
</div>
`;

exports[`Button component should render properly with outlined prop 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 700;
  color: inherit;
  text-transform: uppercase;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 10px;
  margin: 8px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid #5392f9;
  color: #5392f9;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

<div>
  <button
    class="c0"
  >
    <strong
      class="c1"
    >
      Outlined Button
    </strong>
  </button>
</div>
`;

exports[`Button component should render properly with solid prop 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 700;
  color: inherit;
  text-transform: uppercase;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 10px;
  margin: 8px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #5392f9;
  color: #ffffff;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

<div>
  <button
    class="c0"
  >
    <strong
      class="c1"
    >
      Solid Button
    </strong>
  </button>
</div>
`;

exports[`Button component should wrap children into Text component when rendering string or number 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 700;
  color: inherit;
  text-transform: uppercase;
}

.c0 {
  background-color: transparent;
  border: none;
  padding: 10px;
  margin: 8px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #5392f9;
  color: #ffffff;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

<div>
  <button
    class="c0"
  >
    <strong
      class="c1"
    >
      Some text
    </strong>
    <i>
      some icon
    </i>
    <div>
      element2
    </div>
  </button>
</div>
`;
